CopilotHAProxy-demo/manifests/nginx-ingress.yaml
# Ingress resource to expose nginx through HAProxy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: haproxy
    haproxy.org/path-rewrite: "/"
  labels:
    app: nginx
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
